Disease incidence and screening

--- a/keph_level_1_kericho/keph_level_1_kericho_notebook.ipynb
+++ b/keph_level_1_kericho/keph_level_1_kericho_notebook.ipynb
@@ -2802,6 +2802,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0817a09",
+   "metadata": {},
+   "source": [
+    "###### An overall malnutrition incidence rate of 66.05% signals a serious public health concern. This means that roughly two-thirds of the surveyed population is affected by malnutrition. Immediate targeted interventions are needed, such as scaling up nutrition programs, improving food security, and prioritizing at-risk groups to reduce this high rate and improve community well-being. Routine monitoring and evaluation should follow to track progress and ensure resources are reaching those most in need."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "bba19648",
@@ -2856,6 +2864,14 @@
     "for container in ax.containers:\n",
     "    ax.bar_label(container, fontsize=10, label_type='edge')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82dcc5d7",
+   "metadata": {},
+   "source": [
+    "###### Malnutrition incidence rates are high across all sub-counties, with values ranging from 60.97% in Soin-Sigowet to 69.66% in Ainamoi. This indicates that malnutrition is a widespread and serious concern throughout the region, not limited to a single sub-county. The actionable insight is to prioritize comprehensive nutrition interventions across all sub-counties, with particular focus on those with the highest rates like Ainamoi and Kipkelion East. Ongoing monitoring and tailored strategies are needed to reduce these persistently high rates and address the underlying causes in each community."
    ]
   },
   {
@@ -2917,6 +2933,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7df7b5e",
+   "metadata": {},
+   "source": [
+    "###### Malaria incidence rates are high and quite similar across all sub-counties, ranging from 232.3 to 248.88 cases per 1,000 people. This widespread and consistently elevated burden suggests that malaria control efforts should be implemented countywide, rather than targeting only specific areas. Targeted interventions may still be needed in sub-counties with the very highest rates, such as Bureti and Ainamoi, but overall, comprehensive prevention and treatment strategies—such as increasing access to bed nets, diagnostics, and prompt treatment—are needed throughout the region to reduce malaria incidence."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "5e55d4e1",
@@ -2935,6 +2959,14 @@
     "\n",
     "tb_screening_rate = (main_df['tb_screened'].sum() / main_df['household_size'].sum() * 100).round(2)\n",
     "print(f'The overall tb screening rate is {tb_screening_rate:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dca1583",
+   "metadata": {},
+   "source": [
+    "###### An overall TB screening rate of 49.7% indicates that just under half of the population is being screened for tuberculosis. This coverage is relatively low, signalling the need to expand screening efforts to ensure earlier detection and treatment. The actionable insight is to strengthen TB outreach, awareness campaigns, and access to screening services so that a greater proportion of the population is reached, reducing the risk of undiagnosed cases and transmission."
    ]
   },
   {
@@ -2995,8 +3027,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b44672ca",
+   "metadata": {},
+   "source": [
+    "###### TB screening rates are consistently low across all sub-counties, ranging from 48.48% to 51.36%. This means that about half the population in each sub-county is not being screened for tuberculosis, leaving many cases potentially undiagnosed. The actionable insight is to increase TB screening efforts countywide, prioritizing awareness campaigns, improving access to screening facilities, and addressing barriers in sub-counties with the lowest rates such as Soin-Sigowet and Kipkelion West. Comprehensive outreach can help boost early detection and reduce the risk of TB transmission."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "34718a2a",
    "metadata": {},
    "outputs": [
@@ -3004,7 +3044,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The overall TB incidence is 1024.09 per 100,000 people\n"
+      "The overall TB incidence is 1024.09 per 100,000 people.\n"
      ]
     }
    ],
@@ -3012,7 +3052,15 @@
     "# Overall TB incidence rate\n",
     "\n",
     "tb_incidence_rate = (main_df['tb_suspected'].sum() / main_df['household_size'].sum() * 100000).round(2)  # TB incidence per 100000 people. Rare diseases are measured per 100000 people\n",
-    "print(f'The overall TB incidence is {tb_incidence_rate:.2f} per 100,000 people')"
+    "print(f'The overall TB incidence is {tb_incidence_rate:.2f} per 100,000 people.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b0c871a",
+   "metadata": {},
+   "source": [
+    "###### An overall TB incidence rate of 1,024.09 per 100,000 people is extremely high and signals a significant public health concern. The actionable insight is to urgently strengthen TB prevention, early detection, and treatment programs across the population. Health authorities should prioritize expanded screening, community education, and rapid treatment access to reduce TB transmission and incidence rates, and also investigate and address underlying factors contributing to such a high disease burden."
    ]
   },
   {
@@ -3070,6 +3118,14 @@
     "for container in ax.containers:\n",
     "    ax.bar_label(container, fontsize=10, label_type='edge')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650565a2",
+   "metadata": {},
+   "source": [
+    "###### TB incidence rates vary significantly across sub-counties, ranging from about 665 cases per 100,000 people in Soin-Sigowet to 1,268 in Belgut. Sub-counties like Belgut, Bureti, and Ainamoi have particularly high TB incidence rates above 1,100 per 100,000, indicating hotspots with elevated transmission and disease burden. Targeted TB control efforts should prioritize the highest-incidence sub-counties (Belgut, Bureti, Ainamoi) by intensifying screening, treatment access, and preventive measures there. Meanwhile, sustained efforts are also needed in other sub-counties to reduce the incidence and prevent future outbreaks. Resource allocation and intervention planning should reflect these geographic disparities to maximize impact."
    ]
   }
  ],
